@@ -1614,6 +1614,8 @@ Documentation
 Tests
 -----
 
+- Issue #8605: Skip test_gdb if Python is compiled with optimizations.
+
 - Issue #7449: Skip test_socketserver if threading support is disabled
 
 - Issue #8672: Add a zlib test ensuring that an incomplete stream can be
